# vanta

./: .eslintrc.json  .gitignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  package.json  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  release.yml
benches/: encryption-bench.ts  intent-throughput.ts
docs/: architecture.md  mev-protection.md  privacy-model.md
sdk/python/: setup.py
sdk/python/vanta/: __init__.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/ts/: package.json
sdk/ts/src/: index.ts
spec/: RFC-0001-intent-encryption.md  RFC-0002-mev-shield.md  RFC-0003-zk-proofs.md
src/: index.ts
src/agent/: executor.ts  index.ts  strategy.ts
src/cli/: index.ts
src/config/: features.ts  index.ts
src/consensus/: slashing.ts  types.ts  validator.ts
src/core/: encryption.ts  intent-engine.ts  intent-pool.ts  privacy-layer.ts  privacy-score.ts  relay.ts
src/mev/: detector.ts  shield.ts
src/monitoring/: health.ts  index.ts  metrics.ts
src/network/: index.ts  peer.ts  protocol.ts  transport.ts
src/sdk/: client.ts  index.ts  rpc.ts  types.ts  wallet.ts
src/utils/: crypto.ts  index.ts  logger.ts
src/zk/: prover.ts  types.ts
tests/: agent.test.ts  encryption.test.ts  intent-pool.test.ts  intent.test.ts  mev.test.ts  privacy-score.test.ts  slashing.test.ts  zk.test.ts
