[package]
name = "vanta-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for VANTA Protocol — private intent execution on Solana"
license = "Apache-2.0"
repository = "https://github.com/vantaagent/vanta"
keywords = ["solana", "privacy", "mev", "defi"]

[dependencies]
solana-sdk = "1.18"
solana-client = "1.18"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util"] }
